--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -13,7 +12,6 @@ header {
     color: white;
     padding: 1rem;
 }
-
 
 nav ul {
     list-style: none;
@@ -35,23 +33,21 @@ main {
     gap: 1rem; 
 }
 
-
 main article {
     background-color: #fff;
     padding: 1rem;
     flex: 2; 
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    overflow-y: auto
+    overflow-y: auto;
 }
-
 
 main aside {
     background-color: #eee;
     padding: 1rem;
     flex: 1; 
     border-radius: 5px;
-    overflow-y: auto
+    overflow-y: auto;
 }
 
 footer {
@@ -63,4 +59,9 @@ footer {
     flex-direction: row;
     justify-content: center;
     margin-top: 2rem;
+}
+
+
+.works_on_smartphone main {
+    flex-direction: column; 
 }
