--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -11,6 +11,12 @@ header {
     background-color: #333;
     color: white;
     padding: 1rem;
+    .logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+}
+
 }
 
 nav ul {
